# plaidbench

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  BUILD  README.md  WORKSPACE  gen-cifar.py  gen-imdb.py  plaidbench.py  plaidplotter.py  requirements.txt  setup.cfg  setup.py  venv.txt
.travis/: before_install.sh
docs/: BUILD  conf.py
networks/: inception_v3.py  mobilenet.py  resnet50.py  vgg16.py  vgg19.py  xception.py
networks/keras/: imdb_lstm.py  inception_v3.py  resnet50.py  vgg16.py  xception.py
networks/onnx/: runner.py
plaidbench/: __init__.py  cli.py  core.py  frontend_keras.py  frontend_onnx.py  frontend_ops.py  gen-cifar.py  gen-imdb.py
plaidbench/golden/densenet121/: infer,bs-1.npy
plaidbench/golden/densenet169/: infer,bs-1.npy
plaidbench/golden/densenet201/: infer,bs-1.npy
plaidbench/golden/mobilenet/: infer,bs-1.npy  train,bs-1.npy
plaidbench/golden/nasnet_large/: infer,bs-1.npy
plaidbench/golden/nasnet_mobile/: infer,bs-1.npy
plaidbench/golden/resnet50/: infer,bs-1.npy
plaidbench/networks/keras/: densenet121.py  densenet169.py  densenet201.py  imdb_lstm.py  inception_resnet_v2.py  inception_v3.py  mobilenet.py  nasnet_large.py  nasnet_mobile.py  resnet50.py  vgg16.py  vgg19.py  xception.py
plaidbench/networks/ops/: conv2d.py  dense.py  op.py
