# Copyright 2018 Vertex.AI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = plaidbench
version = attr: plaidbench.__version__
description = VertexAI Machine Learning Benchmarks
long_description = Benchmarks for machine-learning implementations.
url = http://vertex.ai
author = Vertex.AI
author_email = eng@vertex.ai
license = https://www.gnu.org/licenses/agpl-3.0.en.html
keywords = development ml
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Software Development
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows :: Windows 10
	Operating System :: POSIX :: Linux
	Programming Language :: C++
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5

[options]
packages = plaidbench,plaidbench/networks,plaidbench/networks/keras
include_package_data = True
install_requires = 
  click>=6.0.0
  enum34>=1.1.6
  h5py>=2.7.0
  numpy
  plaidml
  requests==2.18.4
  six
setup_requires = 
	pytest-runner
tests_require = 
	pytest
	tabulate

[options.entry_points]
console_scripts =
  plaidbench = plaidbench.cli:plaidbench

[options.package_data]
plaidbench =
  *.npy
  golden/*/*.npy
	networks/keras/*.h5

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[yapf]
based_on_style = google
column_limit = 99
indent_dictionary_value = yes
